# asciidoc-gen

./: CHANGELOG.md  Makefile  asciidoc-gen.cabal
app/: Main.hs
